fixes share button location on mobile

--- a/src/css/report.styl
+++ b/src/css/report.styl
@@ -87,10 +87,10 @@ body
 		height 60px
 		width auto
 		left 31px
-		top -65px
+		top -15px
 
 .share-button
-		top -50px
+		top 0px
 
 		.share-connector
 				top 161px
@@ -304,6 +304,14 @@ body
 }
 
 @media screen and (max-width: 800px) {
+		.share-button {
+				top 10px
+		}
+
+		.share-container {
+				top -5px
+		}
+
 		#report__container {
 				flex-direction: column
 		}
